--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "element-ui": "^2.13.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5"
   },
@@ -16,6 +18,9 @@
     "@vue/cli-plugin-router": "~4.2.0",
     "@vue/cli-service": "~4.2.0",
     "vue-template-compiler": "^2.6.11"
+  },
+  "resolutions": {
+    "@vue/cli-service/mini-css-extract-plugin": "0.8.0"
   },
   "browserslist": [
     "> 1%",
